2006-10-13 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	Handle text selection using keyboard navigation 
	(Ignore the hideous colour for now ;)
	
	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/ImageThought.py:
	* src/MMapArea.py:
	Pass modifier mask when handling keystrokes

2006-10-12 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/labyrinth.py:
	Only import utils once labyrinth knows where to look

2006-10-11 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/utils.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	Split out drawing of thought outlines (into utils.py)
	Standardise (somewhat more) on what ul and lr really mean
	Fix resizing of drawing thoughts in edit mode
	
	* src/labyrinth.py:
	Make current path clearer in terminal printing
	
	* src/Makefile.am:
	Really regenerate defs.py and labyrinth when configure is run
	Might (hopefully) fix issue #1
	
	* src/labyrinth.py:
	* src/Browser.py:
	Add new command line options:
	-o / --open: open a map from the given (full) path and filename
	-m / --map: open a map with the filename from the internal "database"
	(Based on patch from Kevin Kubasik.  Fixes issue #3)

	* src/MainWindow.py:
	Add (stupid) icons to toolbar entries.
	Temporarily improves issue #2 until gtk+ fixes it


2006-10-10 Don Scorgie <DonScorgie@Blueyonder.co.uk>
	
	* doc/TheFuture:
	* doc/FileFormat:
	Rejig to be more readable in 80-column format
	
	* doc/TheFuture:
	List of goals for 1.0 release


2006-10-08 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MainWindow.py:
	* src/Browser.py:
	Add missing strings to translations


======= Version 0.2 ======================
2006-10-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* configure.ac:
	Bump version
	
	* src/MainWindow.py:
	Actually set the window icon properly.  No, really this time

	* src/Browser.py:
	Make 'Open' and 'Delete' buttons only sensitive when a map is selected
